--- a/app/views/lessons/lesson002.html.haml
+++ b/app/views/lessons/lesson002.html.haml
@@ -51,7 +51,8 @@
 %p After I created the 7 tabs, my Chrome-window looked like this:
 
 %img(src='/lesson002/l200.png')
-  
+%br/
+
 %p I clicked on tab 2, the codelabs-tab.
 
 %p I continued this lesson by studying the URL listed below:
@@ -61,7 +62,8 @@
 %p I saw this:
 
 %img(src='/lesson002/l201.png')
-  
+%br/
+
 %p On that page I assume the correct ordering of links is listed below:
 
 %ul
@@ -123,6 +125,7 @@
 %p
   It gave me $300 of cloud-credit from Google.
 %img(src='/lesson001/ss10.png')
+%br/
 
 %p
   I hope that you can also get that credit.
@@ -134,12 +137,14 @@
     https://console.cloud.google.com/projectcreate
 
 %img(src='/lesson001/img003.png')
+%br/
 
 %p I used that page to create a project called cp100.
 
 %p After I created cp100, GCP displayed a "CP100" select-option-link at the top of every GCP page in my GCP-tab:
 
 %img(src='/lesson002/l202.png')
+%br/
 
 %p That ended my interaction with the CP100-node I call: "Free-Trial".
 
@@ -173,6 +178,7 @@ Next, in the codelabs-tab, I clicked this link:
 %p I saw this:
 
 %img(src='/lesson002/l203.png')
+%br/
 
 
 %p I clicked the "upper-left-hamburger-link":
@@ -183,10 +189,12 @@ Next, in the codelabs-tab, I clicked this link:
 %p I clicked "APIs & Services":
 
 %img(src='/lesson002/l205.png')
+%br/
 
 %p I saw this:
 
 %img(src='/lesson002/l206.png')
+%br/
 
 %p Near the top I clicked blue-button: "ENABLE APIS AND SERVICES":
 
@@ -198,6 +206,7 @@ Next, in the codelabs-tab, I clicked this link:
 %p I found it:
 
 %img(src='/lesson002/l208.png')
+%br/
 
 %p I clicked the blue-button: "ENABLE".
 
@@ -218,16 +227,19 @@ Next, in the codelabs-tab, I clicked this link:
 %p I clicked "Cloud-Launcher":
 
 %img(src='/lesson002/l209.png')
+%br/
 
 %p I found LAMP by Bitnami:
 
 %img(src='/lesson002/l210.png')
+%br/
 
 %p I clicked blue-button: "LAUNCH ON COMPUTE ENGINE".
 
 %p After a short delay, GCP served me a configuration page:
 
 %img(src='/lesson002/l211.png')
+%br/
 
 %p I assumed that the default configuration was fine for my training.
 
@@ -238,6 +250,7 @@ Next, in the codelabs-tab, I clicked this link:
 %img(src='/lesson002/l212.png')
 %hr/
 %img(src='/lesson002/l213.png')
+%br/
 
 %p In the codelabs-tab, I studied the next link in the sequence:
 
@@ -254,6 +267,7 @@ Next, in the codelabs-tab, I clicked this link:
 %p A LAMP server responded:
 
 %img(src='/lesson002/l215.png')
+%br/
 
 %p I closed that tab.
 
@@ -265,6 +279,7 @@ Next, in the codelabs-tab, I clicked this link:
 %p After 30 seconds, GCP served me an SSH window:
 
 %img(src='/lesson002/l217.png')
+%br/
 
 %p In that window I issued shell commands:
 
@@ -283,12 +298,14 @@ Next, in the codelabs-tab, I clicked this link:
 %p The server responded with configuration information:
 
 %img(src='/lesson002/l218.png')
+%br/
 
 %p The above page convinced me that I successfully completed this exercise.
 
 %p In the GCP-tab I clicked the blue-trashcan-button "DELETE" near the top:
 
 %img(src='/lesson002/l219.png')
+%br/
 
 %p GCP deleted that server for me.
 
@@ -310,6 +327,7 @@ Next, in the codelabs-tab, I clicked this link:
 %p I saw this:
 
 %img(src='/lesson002/l220.png')
+%br/
 
 %p I studied that page.
 
@@ -418,8 +436,44 @@ Next, in the codelabs-tab, I clicked this link:
   %pre
     =render 'lesson002a'
 
+%p In the github-tab of my browser I loaded the URL I saw in the above output:
 
+%p
+  %a(href='https://github.com/GoogleCloudPlatformTraining/cp100-bookshelf' target='x')
+    https://github.com/GoogleCloudPlatformTraining/cp100-bookshelf
 
+%p I saw this:
+
+%img(src='/lesson002/l227.png')
+%br/
+
+%p I studied the URLs listed below:
+
+%ul
+  %li
+    %a(href='https://github.com/GoogleCloudPlatformTraining/cp100-bookshelf/tree/master/app-engine' target='x')
+      https://github.com/GoogleCloudPlatformTraining/cp100-bookshelf/tree/master/app-engine
+  %li
+    %a(href='https://github.com/GoogleCloudPlatformTraining/cp100-bookshelf/tree/master/cloud-storage' target='x')
+      https://github.com/GoogleCloudPlatformTraining/cp100-bookshelf/tree/master/cloud-storage
+  %li
+    %a(href='https://github.com/GoogleCloudPlatformTraining/cp100-bookshelf/tree/master/compute-engine' target='x')
+      https://github.com/GoogleCloudPlatformTraining/cp100-bookshelf/tree/master/compute-engine
+  %li
+    %a(href='https://github.com/GoogleCloudPlatformTraining/cp100-bookshelf/tree/master/container-engine' target='x')
+      https://github.com/GoogleCloudPlatformTraining/cp100-bookshelf/tree/master/container-engine
+  %li
+    %a(href='https://github.com/GoogleCloudPlatformTraining/cp100-bookshelf/blob/master/README.md' target='x')
+      https://github.com/GoogleCloudPlatformTraining/cp100-bookshelf/blob/master/README.md
+      
+
+%p I want to learn Docker.
+
+%p This file looked interesting:
+
+%p
+  %a(href='https://github.com/GoogleCloudPlatformTraining/cp100-bookshelf/blob/master/container-engine/Dockerfile' target='x')
+    container-engine/Dockerfile
 
 
 
