--- a/app/views/lessons/lesson002.html.haml
+++ b/app/views/lessons/lesson002.html.haml
@@ -475,6 +475,22 @@ Next, in the codelabs-tab, I clicked this link:
   %a(href='https://github.com/GoogleCloudPlatformTraining/cp100-bookshelf/blob/master/container-engine/Dockerfile' target='x')
     container-engine/Dockerfile
 
+%p In the codelabs-tab, I clicked the next link in the sequence:
+
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cp100-app-engine/#3' target='x')
+    https://codelabs.developers.google.com/codelabs/cp100-app-engine/#3
+
+%p I studied the page.
+
+%p In the GCP-tab I loaded this URL:
+
+%p
+  %a(href='https://console.cloud.google.com/code' target='x')
+    https://console.cloud.google.com/code
+
+%p I studied the page and recognized it as a git repo.
+
 
 
 
