--- a/app/views/lessons/lesson002.html.haml
+++ b/app/views/lessons/lesson002.html.haml
@@ -491,8 +491,60 @@ Next, in the codelabs-tab, I clicked this link:
 
 %p I studied the page and recognized it as a git repo.
 
+%p I saw this:
 
+%img(src='/lesson002/l228.png')
+%br/
 
+%p I clicked the folder: "app-engine".
+
+%p I clicked the file: "app.yaml".
+
+%p I saw that it was a simple yaml file.
+
+%p I clicked the folder: "app-engine".
+
+%p I clicked the file: "main.py".
+
+%p I saw that it was a simple Python file.
+
+%p I clicked the folder: "app-engine".
+
+%p I clicked the file: "config.py".
+
+%p I saw that it was a simple Python file.
+
+%p I clicked the folder: "app-engine".
+
+%p I clicked the folder: "bookshelf".
+
+%p I studied files in that folder.
+
+%p In the codelabs-tab, I clicked the next link in the sequence:
+
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cp100-app-engine/#4' target='x')
+    https://codelabs.developers.google.com/codelabs/cp100-app-engine/#4
+
+%p I studied the page.
+
+%p In Cloud-Shell tab I entered commands:
+
+.syntax
+  %pre
+    %code
+      cd ~/cp100/default/app-engine
+      cat requirements.txt
+      pip install -r requirements.txt -t lib
+      cat appengine_config.py
+      gcloud app deploy
+      exit
+
+%p I saw this:
+
+.syntax
+  %pre
+    =render 'lesson002b'
 
 
 
