--- a/app/views/lessons/_lesson001y.erb
+++ b/app/views/lessons/_lesson001y.erb
@@ -75,11 +75,11 @@ Application startup error:
 UserWarning: Matplotlib is building the font cache using fc-list. This may take a moment.
   warnings.warn('Matplotlib is building the font cache using fc-list. This may take a moment.')
 Traceback (most recent call last):
-  File "ingestapp.py", line 22, in <module>
+  File "ingestapp.py", line 22, in &lt;module>
     import google.cloud.storage as gcs
-  File "/usr/local/lib/python2.7/dist-packages/google/cloud/storage/__init__.py", line 39, in <module>
+  File "/usr/local/lib/python2.7/dist-packages/google/cloud/storage/__init__.py", line 39, in &lt;module>
     from google.cloud.storage.batch import Batch
-  File "/usr/local/lib/python2.7/dist-packages/google/cloud/storage/batch.py", line 29, in <module>
+  File "/usr/local/lib/python2.7/dist-packages/google/cloud/storage/batch.py", line 29, in &lt;module>
     from google.cloud.exceptions import make_exception
 ImportError: cannot import name make_exception
 
