--- a/app/views/lessons/lesson002.html.haml
+++ b/app/views/lessons/lesson002.html.haml
@@ -538,6 +538,7 @@ Next, in the codelabs-tab, I clicked this link:
       pip install -r requirements.txt -t lib
       cat appengine_config.py
       gcloud app deploy
+      gcloud app browse
       exit
 
 %p I saw this:
@@ -546,6 +547,15 @@ Next, in the codelabs-tab, I clicked this link:
   %pre
     =render 'lesson002b'
 
+%p In tab-6 I loaded this URL:
+
+%p https://cp100-196102.appspot.com
+
+%p I saw this:
+
+%img(src='/lesson002/l229.png')
+
+%p
 
 
   
