--- a/app/views/lessons/lesson002.html.haml
+++ b/app/views/lessons/lesson002.html.haml
@@ -555,7 +555,39 @@ Next, in the codelabs-tab, I clicked this link:
 
 %img(src='/lesson002/l229.png')
 
+%p In the codelabs-tab, I clicked the next link in the sequence:
+
 %p
+  %a(href='https://codelabs.developers.google.com/codelabs/cp100-app-engine/#5' target='x')
+    https://codelabs.developers.google.com/codelabs/cp100-app-engine/#5
+
+%p I studied the page.
+
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cp100-app-engine/#6' target='x')
+    https://codelabs.developers.google.com/codelabs/cp100-app-engine/#6
+
+%p I studied the page.
+
+%p In tab-6 I asked for browser-refresh with ctrl-r.
+
+%p After that I saw this:
+
+%img(src='/lesson002/l229.png')
+
+%p I clicked green-button: "Add book".
+
+%p I saw this:
+
+%img(src='/lesson002/l230.png')
+
+%p I entered information about a book.
+
+%p I clicked green-button: "Save".
+
+%p I saw this:
+
+%img(src='/lesson002/l231.png')
 
 
   
