--- a/app/views/lessons/lesson002.html.haml
+++ b/app/views/lessons/lesson002.html.haml
@@ -563,6 +563,8 @@ Next, in the codelabs-tab, I clicked this link:
 
 %p I studied the page.
 
+%p I clicked the next link in the sequence:
+
 %p
   %a(href='https://codelabs.developers.google.com/codelabs/cp100-app-engine/#6' target='x')
     https://codelabs.developers.google.com/codelabs/cp100-app-engine/#6
@@ -589,8 +591,63 @@ Next, in the codelabs-tab, I clicked this link:
 
 %img(src='/lesson002/l231.png')
 
+%p In the GCP-tab I visited a URL:
+
+%p
+  %a(href='https://console.cloud.google.com/datastore' target='x')
+    https://console.cloud.google.com/datastore
+  
+
+%p I saw this:
+
+%img(src='/lesson002/l232.png')
 
   
+%p In the GCP-tab I visited a URL:
+
+%p
+  %a(href='https://console.cloud.google.com/code' target='x')
+    https://console.cloud.google.com/code
+
+%p I clicked app-engine folder.
+
+%p I clicked bookshelf folder.
+
+%p I clicked model_datastore.py
+
+%p I saw this:
+
+%img(src='/lesson002/l233.png')
+
+
+%p In the codelabs-tab, I studied this page:
+
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cp100-app-engine/#6' target='x')
+    https://codelabs.developers.google.com/codelabs/cp100-app-engine/#6
+
+%p I carefully read: "Step 5".
+
+%p In my mind I joined that section with model_datastore.py (in GCP-tab).
+
+%p Now I understand Cloud Datastore better.
+
+%p If I ever need to add a No-SQL datastore to a python-web-app I will return to this lesson.
+
+%p In the codelabs-tab, I clicked the next link in the sequence:
+
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cp100-app-engine/#7' target='x')
+    https://codelabs.developers.google.com/codelabs/cp100-app-engine/#7
+
+%p I studied the page.
+
+
+%p That ended my interaction with the CP100-node I call: "App-Engine".
+
+%a(href='#top') [top]
+%hr/
+
 
 
 
