--- a/app/views/lessons/lesson002.html.haml
+++ b/app/views/lessons/lesson002.html.haml
@@ -97,6 +97,8 @@
     %a(href='#cloud-launcher') cloud-launcher
   %li
     %a(href='#app-engine') app-engine
+  %li
+    %a(href='#cloud-storage') cloud-storage
 
 %hr/
 
@@ -318,7 +320,7 @@ Next, in the codelabs-tab, I clicked this link:
 
 %h2#app-engine App-Engine
 
-%p#app-engine Next, in the codelabs-tab, I clicked this link:
+%p Next, in the codelabs-tab, I clicked this link:
 
 %p
   %a(href='https://codelabs.developers.google.com/codelabs/cp100-app-engine' target='x')
@@ -650,9 +652,58 @@ Next, in the codelabs-tab, I clicked this link:
 
 
 
+%h2#cloud-storage Cloud-Storage
+
+%p Next, in the codelabs-tab, I clicked this link:
+
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cp100-cloud-storage' target='x')
+    https://codelabs.developers.google.com/codelabs/cp100-cloud-storage
+  
+%p I saw this:
+
+%img(src='/lesson002/l234.png')
+
+%p I studied that page.
+
+%p I clicked the next link in the sequence:
+
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cp100-cloud-storage/#1' target='x')
+    https://codelabs.developers.google.com/codelabs/cp100-cloud-storage/#1
+  
+%p I studied that page.
+
+%p I bookmarked three links in that page:
+
+%ul
+  %li
+    %a(href='https://cloud.google.com/storage/docs/' target='x')
+      https://cloud.google.com/storage/docs/
+  %li
+    %a(href='https://cloud.google.com/appengine/docs/standard/python/googlecloudstorageclient/setting-up-cloud-storage' target='x')
+      python/googlecloudstorageclient/setting-up-cloud-storage
+  %li
+    %a(href='https://cloud.google.com/apis/docs/cloud-client-libraries' target='x')
+      https://cloud.google.com/apis/docs/cloud-client-libraries
+  
+
+%p I clicked the next link in the sequence:
+
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cp100-cloud-storage/#2' target='x')
+    https://codelabs.developers.google.com/codelabs/cp100-cloud-storage/#2
+  
+%p I studied that page.
 
 
+%p I clicked the next link in the sequence:
 
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cp100-cloud-storage/#3' target='x')
+    https://codelabs.developers.google.com/codelabs/cp100-cloud-storage/#3
+  
+%p I studied that page.
 
 
 
