--- a/app/views/lessons/lesson002.html.haml
+++ b/app/views/lessons/lesson002.html.haml
@@ -794,6 +794,52 @@ Next, in the codelabs-tab, I clicked this link:
 %img(src='/lesson002/l236.png')
 
 
+%p I clicked the next link in the sequence:
+
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cp100-cloud-storage/#5' target='x')
+    https://codelabs.developers.google.com/codelabs/cp100-cloud-storage/#5
+  
+%p I studied that page.
+
+%p I studied the output from gcloud app deploy (displayed above).
+
+%p It gave me the URL of my app on appspot:
+
+%p target url: [https://cp100-196102.appspot.com]
+
+%p I visited https://cp100-196102.appspot.com
+
+%p I saw this:
+
+%img(src='/lesson002/l237.png')
+
+%p I clicked geen-button: "Add book".
+
+%p I added a book and pressed the green-button: "Save":
+
+%img(src='/lesson002/l238.png')
+
+%p I saw this:
+
+%img(src='/lesson002/l239.png')
+
+%p In GCP-tab I loaded URL:
+
+%p
+  %a(href='https://console.cloud.google.com/storage' target='x')
+    https://console.cloud.google.com/storage
+
+%p I found the image for the book:
+
+%img(src='/lesson002/l240.png')
+
+%p That ended my interaction with the CP100-node I call: "Cloud-Storage".
+
+%a(href='#top') [top]
+%hr/
+
+
 
 
 %a(href='#top') [top]
