--- a/app/views/lessons/lesson002.html.haml
+++ b/app/views/lessons/lesson002.html.haml
@@ -926,7 +926,36 @@ Next, in the codelabs-tab, I clicked this link:
 .syntax
   %pre
     =render 'lesson002c'
+%p In Cloud-Shell, I entered another long command:
+
+.syntax
+  %pre
+    =render 'lesson002d'
+
+%p I saw this:
+
+.syntax
+  %pre
+    =render 'lesson002e'
+
+
+%p In GCP-tab I visited URL:
 %p
+  %a(href='https://console.cloud.google.com/compute' target='x')
+    https://console.cloud.google.com/compute
+
+%p I saw this:
+
+%img(src='/lesson002/l242.png')
+
+%p I made note of the IP address: 35.224.163.97
+
+%p I visited URL:
+
+%p http://35.224.163.97:8080
+%p I saw this:
+
+%img(src='/lesson002/l243.png')
 
 %a(href='#top') [top]
 %hr/
