--- a/app/views/lessons/lesson002.html.haml
+++ b/app/views/lessons/lesson002.html.haml
@@ -899,8 +899,6 @@ Next, in the codelabs-tab, I clicked this link:
   %a(href='https://codelabs.developers.google.com/codelabs/cp100-compute-engine/#3' target='x')
     https://codelabs.developers.google.com/codelabs/cp100-compute-engine/#3
 
-%p I studied that page.
-
 %p In GCP-tab I visited URL:
 %p
   %a(href='https://console.cloud.google.com' target='x')
@@ -957,6 +955,51 @@ Next, in the codelabs-tab, I clicked this link:
 
 %img(src='/lesson002/l243.png')
 
+%p In the codelabs-tab,  I studied the next page:
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cp100-compute-engine/#4' target='x')
+    https://codelabs.developers.google.com/codelabs/cp100-compute-engine/#4
+%p I visited the Bookshelf-tab.
+%p I clicked green-button: "Add book".
+%p I filled out the form and clicked green-button: "Save".
+
+
+%p I saw this:
+
+%img(src='/lesson002/l244.png')
+
+
+%p In the codelabs-tab,  I studied the next page:
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cp100-compute-engine/#5' target='x')
+    https://codelabs.developers.google.com/codelabs/cp100-compute-engine/#5
+
+
+
+%p I bookmarked links in that page:
+
+%ul
+  %li
+    %a(href='https://cloud.google.com/appengine/docs/python/ndb/' target='x')
+      https://cloud.google.com/appengine/docs/python/ndb/
+  %li
+    %a(href='https://cloud.google.com/sdk/cloud-client-libraries' target='x')
+      https://cloud.google.com/sdk/cloud-client-libraries
+  %li
+    %a(href='https://cloud.google.com/appengine/docs/python/googlecloudstorageclient/using-cloud-storage' target='x')
+      https://cloud.google.com/appengine/docs/python/googlecloudstorageclient/using-cloud-storage
+  %li
+    %a(href='https://cloud.google.com/docs/choosing-a-compute-option#comparing_options' target='x')
+      https://cloud.google.com/docs/choosing-a-compute-option#comparing_options
+  
+
+%p In the codelabs-tab,  I studied the next page:
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cp100-compute-engine/#6' target='x')
+    https://codelabs.developers.google.com/codelabs/cp100-compute-engine/#6
+
+
+%p
 %a(href='#top') [top]
 %hr/
 
