--- a/app/views/lessons/lesson002.html.haml
+++ b/app/views/lessons/lesson002.html.haml
@@ -997,6 +997,34 @@ Next, in the codelabs-tab, I clicked this link:
 %p
   %a(href='https://codelabs.developers.google.com/codelabs/cp100-compute-engine/#6' target='x')
     https://codelabs.developers.google.com/codelabs/cp100-compute-engine/#6
+%p In the GCP-tab I visited this URL:
+
+%p
+  %a(href='https://console.cloud.google.com/compute' target='x')
+    https://console.cloud.google.com/compute
+
+%p I deleted the instance: "bookshelf".
+
+%p In the GCP-tab I visited this URL:
+
+%p
+  %a(href='https://console.cloud.google.com/networking' target='x')
+    https://console.cloud.google.com/networking
+
+%p I saw this:
+
+%img(src='/lesson002/l245.png')
+
+%p I clicked link "default" near top-left.
+%p I clicked link "Firewall rules":
+
+%img(src='/lesson002/l246.png')
+
+%p I deleted the rule for 8080.
+
+%p GCP indicated success.
+
+%p That ended my interaction with the CP100-node I call: "Compute-Engine".
 
 
 %p
