--- a/app/views/lessons/index.html.haml
+++ b/app/views/lessons/index.html.haml
@@ -3,4 +3,6 @@
 %ul
   %li
     %a(href='/lessons/lesson001') Lesson 001 [ Google GCP ]
+  %li
+    %a(href='/lessons/lesson002') Lesson 002 [ Google GCP ]
 
