--- a/app/views/home/links.html.haml
+++ b/app/views/home/links.html.haml
@@ -13,4 +13,10 @@
   %li
     %a(href='https://codelabs.developers.google.com/cpb100' target='x')
       https://codelabs.developers.google.com/cpb100
+  %li
+    %a(href='https://codelabs.developers.google.com/cp100' target='x')
+      https://codelabs.developers.google.com/cp100
+  %li
+    %a(href='https://codelabs.developers.google.com/cpo200' target='x')
+      https://codelabs.developers.google.com/cpo200
   
