--- a/app/views/lessons/lesson002.html.haml
+++ b/app/views/lessons/lesson002.html.haml
@@ -101,6 +101,8 @@
     %a(href='#cloud-storage') cloud-storage
   %li
     %a(href='#compute-engine') compute-engine
+  %li
+    %a(href='#container-engine') container-engine
 
 %hr/
 
@@ -1026,6 +1028,35 @@ Next, in the codelabs-tab, I clicked this link:
 
 %p That ended my interaction with the CP100-node I call: "Compute-Engine".
 
+
+%p
+%a(href='#top') [top]
+%hr/
+
+%h2#container-engine Container-Engine
+
+%p Next, in the codelabs-tab, I clicked this link:
+
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cp100-container-engine' target='x')
+    https://codelabs.developers.google.com/codelabs/cp100-container-engine
+  
+%p I saw this:
+
+%img(src='/lesson002/l247.png')
+
+%p I studied that page.
+
+%p I clicked through to the next page:
+
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cp100-container-engine/#1' target='x')
+    https://codelabs.developers.google.com/codelabs/cp100-container-engine/#1
+
+%p I bookmarked links in that page:
+
+%ul
+  %li
 
 %p
 %a(href='#top') [top]
