--- a/app/views/lessons/lesson002.html.haml
+++ b/app/views/lessons/lesson002.html.haml
@@ -1057,6 +1057,38 @@ Next, in the codelabs-tab, I clicked this link:
 
 %ul
   %li
+    %a(href='https://cloud.google.com/container-engine/docs/' target='x')
+      https://cloud.google.com/container-engine/docs/
+  %li
+    %a(href='https://kubernetes.io/' target='x')
+      https://kubernetes.io/
+  %li
+    %a(href='https://kubernetes.io/docs/user-guide/kubectl-overview/' target='x')
+      https://kubernetes.io/docs/user-guide/kubectl-overview/
+  %li
+    %a(href='https://kubernetes.io/docs/admin/node/' target='x')
+      https://kubernetes.io/docs/admin/node/
+  %li
+    %a(href='https://cloud.google.com/compute/docs/instances/' target='x')
+      https://cloud.google.com/compute/docs/instances/
+  %li
+    %a(href='https://kubernetes.io/docs/user-guide/pods/' target='x')
+      https://kubernetes.io/docs/user-guide/pods/
+  %li
+    %a(href='https://kubernetes.io/docs/user-guide/replication-controller/' target='x')
+      https://kubernetes.io/docs/user-guide/replication-controller/
+  %li
+    %a(href='https://kubernetes.io/docs/user-guide/services/' target='x')
+      https://kubernetes.io/docs/user-guide/services/
+  %li
+    %a(href='https://cloud.google.com/compute/docs/load-balancing/network/' target='x')
+      https://cloud.google.com/compute/docs/load-balancing/network/
+  %li
+    %a(href='https://cloud.google.com/container-registry/docs/' target='x')
+      https://cloud.google.com/container-registry/docs/
+  
+
+
 
 %p
 %a(href='#top') [top]
