--- a/app/views/lessons/lesson002.html.haml
+++ b/app/views/lessons/lesson002.html.haml
@@ -1087,6 +1087,50 @@ Next, in the codelabs-tab, I clicked this link:
     %a(href='https://cloud.google.com/container-registry/docs/' target='x')
       https://cloud.google.com/container-registry/docs/
   
+%p I clicked through to the next page:
+
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cp100-container-engine/#2' target='x')
+    https://codelabs.developers.google.com/codelabs/cp100-container-engine/#2
+%p I studied that page.
+
+%p In GCP-tab I visited this URL:
+
+%p
+  %a(href='https://console.cloud.google.com/apis' target='x')
+    https://console.cloud.google.com/apis
+
+
+%p Near the top I clicked blue-button: "ENABLE APIS AND SERVICES":
+
+%img(src='/lesson002/l207.png')
+%br/
+
+%p I searched for "Kubernetes Engine API".
+
+%p I found it; I clicked on the square:
+
+%img(src='/lesson002/l248.png')
+%br/
+
+%p I was ready to click the blue-button: "ENABLE".
+
+%p But, GCP indicated that it was already enabled:
+
+
+%img(src='/lesson002/l249.png')
+%br/
+
+%p In the Cloud-Shell-tab I clicked "Reconnect":
+
+%img(src='/lesson002/l250.png')
+%br/
+
+%p I entered shell commands:
+
+.syntax
+  %pre
+    =render 'lesson002f'
 
 
 
