--- a/app/views/lessons/lesson002.html.haml
+++ b/app/views/lessons/lesson002.html.haml
@@ -1132,6 +1132,12 @@ Next, in the codelabs-tab, I clicked this link:
   %pre
     =render 'lesson002f'
 
+%p I saw this:
+
+.syntax
+  %pre
+    =render 'lesson002g'
+
 
 
 %p
