--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -142,7 +142,7 @@
 
 %p The third page had a noteworthy URL I used to get $300 of cloud-credit from Google:
 
-%p I loaded the URL into tab 3, the GCP-tab:
+%p I loaded the URL into the GCP-tab:
 %p
   %a(href='https://console.developers.google.com/freetrial' target='x')
     https://console.developers.google.com/freetrial
