--- a/app/views/lessons/lesson002.html.haml
+++ b/app/views/lessons/lesson002.html.haml
@@ -1177,6 +1177,28 @@ Next, in the codelabs-tab, I clicked this link:
       kubectl get pods
       kubectl get services bookshelf-frontend
 
+%p Those commands made Cloud-Shell very busy.
+
+%p I captured output from the end:
+
+.syntax
+  %pre
+    =render 'lesson002h'
+
+%p I made note of the IP address from the above output:
+
+%p 35.226.210.138
+
+%p In tab-6 I entered this URL: http://35.226.210.138
+
+
+%p I saw this:
+
+%img(src='/lesson002/l251.png')
+%br/
+
+
+
 
 %p
 %a(href='#top') [top]
