--- a/app/views/lessons/lesson002.html.haml
+++ b/app/views/lessons/lesson002.html.haml
@@ -1197,6 +1197,120 @@ Next, in the codelabs-tab, I clicked this link:
 %img(src='/lesson002/l251.png')
 %br/
 
+%p In codelabs-tab I clicked to the next page:
+
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cp100-container-engine/#4' target='x')
+    https://codelabs.developers.google.com/codelabs/cp100-container-engine/#4
+
+%p I studied that page.
+
+%p In the bookshelf-tab (should be tab-6), I clicked the green-button: "Add book".
+
+%p I filled out the form:
+
+%img(src='/lesson002/l252.png')
+%br/
+
+%p I clicked green-button "Save"; It responded:
+
+%p
+
+%img(src='/lesson002/l253.png')
+%br/
+
+
+%p In codelabs-tab I clicked to the next page:
+
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cp100-container-engine/#5' target='x')
+    https://codelabs.developers.google.com/codelabs/cp100-container-engine/#5
+
+%p I studied that page.
+
+
+%p In codelabs-tab I clicked to the next page:
+
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cp100-container-engine/#6' target='x')
+    https://codelabs.developers.google.com/codelabs/cp100-container-engine/#6
+
+%p I studied that page.
+
+%p In GCP-tab, I visited URL:
+
+%p
+  %a(href='https://console.cloud.google.com/kubernetes' target='x')
+    https://console.cloud.google.com/kubernetes
+%p I clicked the icon: "bookshelf".
+%p I clicked the trash-icon on the left; I wanted to delete the cluster:
+
+
+%img(src='/lesson002/l254.png')
+%br/
+
+%p In GCP-tab, I clicked the hamburger-link.
+
+%p I picked "Container Registry".
+
+%p I saw this:
+
+%img(src='/lesson002/l255.png')
+%br/
+
+%p I clicked "bookshelf":
+
+%img(src='/lesson002/l256.png')
+%br/
+
+%p I checked it; that activated blue-button: "DELETE".
+
+%p I clicked: "DELETE":
+
+%img(src='/lesson002/l257.png')
+%br/
+
+%p In GCP-tab I visited URL:
+
+%p
+  %a(href='https://console.cloud.google.com/networking/firewalls' target='x')
+    https://console.cloud.google.com/networking/firewalls
+
+%p I saw this:
+
+%img(src='/lesson002/l258.png')
+%br/
+
+%p I deleted the two firewall-rules for bookshelf:
+
+%img(src='/lesson002/l260.png')
+%br/
+
+
+%p In GCP-tab I visited URL:
+
+%p
+  %a(href='https://console.cloud.google.com/net-services/loadbalancing' target='x')
+    https://console.cloud.google.com/net-services/loadbalancing
+
+%p I saw this:
+  
+%img(src='/lesson002/l261.png')
+%br/
+
+%p I clicked the trashcan-icon to delete that service:
+
+%img(src='/lesson002/l262.png')
+%br/
+
+%p I visited the VM URL to ensure I had no VMs eating my GCP budget:
+%p
+  %a(href='https://console.cloud.google.com/compute' target='x')
+    https://console.cloud.google.com/compute
+%p GCP showed that none were running.
+
+
+%p That ended my interaction with the CP100-node I call: "Container-Engine".
 
 
 
