--- a/app/views/lessons/lesson002.html.haml
+++ b/app/views/lessons/lesson002.html.haml
@@ -103,6 +103,8 @@
     %a(href='#compute-engine') compute-engine
   %li
     %a(href='#container-engine') container-engine
+  %li
+    %a(href='#big-query') big-query
 
 %hr/
 
@@ -1318,4 +1320,14 @@ Next, in the codelabs-tab, I clicked this link:
 %a(href='#top') [top]
 %hr/
 
-  
+%h2#big-query Big Query
+
+
+
+%p UNDER CONSTRUCTION.
+%p That ended my interaction with the CP100-node I call: "Big Query".
+%p Also that ends lesson002 of cs101.us
+
+%p
+%a(href='#top') [top]
+%hr/
