--- a/app/views/lessons/lesson002.html.haml
+++ b/app/views/lessons/lesson002.html.haml
@@ -1322,6 +1322,23 @@ Next, in the codelabs-tab, I clicked this link:
 
 %h2#big-query Big Query
 
+%p Next, in the codelabs-tab, I clicked this link:
+
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cp100-big-query' target='x')
+    https://codelabs.developers.google.com/codelabs/cp100-big-query
+  
+%p I saw this:
+
+%img(src='/lesson002/l263.png')
+
+
+
+
+
+
+
+
 
 
 %p UNDER CONSTRUCTION.
